--- a/Bootstrap/Создание макета.html
+++ b/Bootstrap/Создание макета.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Домашняя работа</title>
     <!-- Bootstrap -->
-<link href="style/css/bootstrap.min.css" rel="stylesheet">
+   <link rel="stylesheet" href="css/bootstrap.min.css" >
+   <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
