--- a/Bootstrap/Создание макета.html
+++ b/Bootstrap/Создание макета.html
@@ -4,13 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Домашняя работа</title>
+    <title>ДОМАШНЯЯ РАБОТА</title>
     <!-- Bootstrap -->
    <link rel="stylesheet" href="css/bootstrap.min.css" >
    <link rel="stylesheet" href="css/style.css">
-
 </head>
 <body>
-    
+      <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2 header1">
+                <h3>ЛОГОТИП</h3>
+      </div>
+        <div class="col-md-8 header">
+            <h3> НАЗВАНИЕ САЙТА</h3>
+        </div>
+        
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
