--- a/Bootstrap/Создание макета.html
+++ b/Bootstrap/Создание макета.html
@@ -15,17 +15,29 @@
             <div class="col-md-2 header1">
                 <h3>ЛОГОТИП</h3>
       </div>
+
         <div class="col-md-8 header">
-            <h3> НАЗВАНИЕ САЙТА</h3>
+            <h3>НАЗВАНИЕ САЙТА</h3>
         </div>
-        
 
+        <div class="col-md-2 header2">
+            <h3>КОНТАКТЫ</h3>
+        </div>
+    </div>
 
+    <div class="row">
+        <div class="col-md-12 photo">
+            <h2>ФОТО</h2>
+        </div>
+    </div>
 
+    <div class="row">
+        <div class="col-md-12 tovar">
+            <h4>ТОВАРЫ</h4>
+        </div>
+    </div>
 
-
-
-
+    
 
 
 
