--- a/Bootstrap/Создание макета.html
+++ b/Bootstrap/Создание макета.html
@@ -23,22 +23,34 @@
         <div class="col-md-2 header2">
             <h3>КОНТАКТЫ</h3>
         </div>
-    </div>
+      </div>
 
-    <div class="row">
+      <div class="row">
         <div class="col-md-12 photo">
             <h2>ФОТО</h2>
         </div>
-    </div>
+      </div>
 
-    <div class="row">
+      <div class="row">
         <div class="col-md-12 tovar">
             <h4>ТОВАРЫ</h4>
         </div>
-    </div>
+      </div>
 
-    
+      <div class="row">
+        <div class="col-md-2 my-3 offset-3 cell"></div>
+        <div class="col-md-2 my-3 offset-2 cell"></div>
+      </div>
 
+      <div class="row">
+        <div class="col-md-2 my-3 cell1"></div>
+        <div class="col-md-2 my-3 offset-1 cell1"></div>
+        <div class="col-md-2 my-3 offset-2 cell1"></div>
+        <div class="col-md-2 my-3 offset-1 cell1"></div>
+      </div>
+      </div>
+
+      
 
 
 
