--- a/Bootstrap/Создание макета.html
+++ b/Bootstrap/Создание макета.html
@@ -9,7 +9,7 @@
    <link rel="stylesheet" href="css/bootstrap.min.css" >
    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<div>
       <div class="container-fluid">
         <div class="row">
             <div class="col-md-2 header1">
@@ -33,7 +33,7 @@
 
       <div class="row">
         <div class="col-md-12 tovar">
-            <h4>ТОВАРЫ</h4>
+           <h4>ТОВАРЫ</h4>
         </div>
       </div>
 
@@ -50,11 +50,11 @@
       </div>
       </div>
 
-      
-
-
-
-
-
+      <div class="row"></div>
+      <div class="col-md-12 footer">
+        <h4>ФУТЕР</h4>
+       </div>
+    </div>
+</div>
 </body>
 </html>
