--- a/Bootstrap/Создание макета.html
+++ b/Bootstrap/Создание макета.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<div lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -55,6 +55,7 @@
         <h4>ФУТЕР</h4>
        </div>
     </div>
+</div>
 </div>
 </body>
 </html>
