--- a/Bootstrap/practiceBootstrap2_4.html
+++ b/Bootstrap/practiceBootstrap2_4.html
@@ -4,38 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Практическое задание 2.4 Создание средней модульной сетки </title>
+    <title>Практическое задание 2.4 Создание средней модульной сетки</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style 3.css">
+    <link rel="stylesheet" href="css/style_3.css">
+
 </head>
 <body>
-
-    <div class="container"> 
-        <div class="row"> 
-
-          <div class="col‐md‐2 push‐md-0">1</div> 
-          <div class="col‐md‐2 pull‐0">2</div> 
-
-        </div> 
-
-        <div class="row"> 
-
-          <div class="col‐md‐2 push‐md-3">3</div>
-          <div class="col‐md‐2 pull‐2">4</div> 
-        </div> 
-
-        <div class="row"> 
-
-          <div class="col‐md‐4 push‐8">Модуль 1</div> 
-          <div class="col‐md‐4 col‐md‐pull‐4">Модуль 2</div> 
-        </div> 
-
-        <div class="row"> == $0
-
-          <div class="col‐md‐4 col‐md‐push‐4" >Модуль 1</div> 
-          <div class="col‐md‐4 col‐md‐pull‐3">Модуль 2</div> 
-        </div> 
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2 push-md-0">1</div>
+            <div class="col-md-2 pull-0">2</div>
         </div>
-
+        <div class="row">
+            <div class="col-md-2 push-md-3">3</div>
+            <div class="col-md-2 pull-2">4</div>
+        </div>
+        <div class="row">
+            <div class="col-md-4 push-8">Модуль 1</div>
+            <div class="col-md-4 col-md-pull-4">Модуль</div>
+        </div>
+        <div class="row"> 
+            <div class="col-md-4 col-md-push-4" >Модуль 1</div> 
+            <div class="col-md-4 col-md-pull-3">Модуль 2</div> 
+    </div>
 </body>
 </html>
+
