--- a/Bootstrap/practiceBootstrap2_3.html
+++ b/Bootstrap/practiceBootstrap2_3.html
@@ -4,47 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Практическое задание 2.3 Создание средней модульной сетки </title>
+    <title>Практическое задание 2.3 Создание средней модульной сетки </head>
+    </title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style_3.css">
 </head>
 <body>
-    
-    <style type="text/css"> 
-        .container 
-        { 
-        border:1px solid #FF8000; 
-        } 
-        .top 
-        { 
-      background‐color:#FFB871; 
-      border:1px solid white;  
-      font‐weight:bold; 
-      color:white; 
-      height:auto; 
-      padding‐bottom:20px; 
-   } 
-  </style> 
-Код: 
-  <div class="container"> 
-    <div class="row"> 
-      <div class="col‐md‐2 col‐md‐offset‐2" >.col‐md‐4</div> 
-      <div class="col‐md‐2">.col‐md‐4</div> 
-      <div class="col‐md‐2">.col‐md‐4</div> 
-    </div> 
-    <div class="row"> 
-      <div class="col‐md‐2 col‐md‐offset‐2" >.col‐md‐4</div> 
-      <div class="col‐md‐2 col‐md‐offset‐2">.col‐md‐4</div> 
-      <div class="col‐md‐2 ">.col‐md‐4</div> 
-    </div> 
-    <div class="row"> 
-      <div class="col‐md‐2 col‐md‐offset‐2" >.col‐md‐4</div> 
-      <div class="col‐md‐2 col‐md‐offset‐2">.col‐md‐4</div> 
-      <div class="col‐md‐2 col‐md‐offset‐4">.col‐md‐4</div> 
-    </div> 
-</div> 
-</div>
-
-
-
-
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2 offset-2">1</div>
+            <div class="col-md-2 offset-3">2</div>
+            <div class="col-md-2">3</div>
+        </div>
+        <div class="row">
+            <div class="col-md-2 offset-2">4</div>
+            <div class="col-md-2 offset-2">5</div>
+            <div class="col-md-2">6</div>
+        </div>
+        <div class="row">
+            <div class="col-md-2 offset-2">7</div>
+            <div class="col-md-2 offset-2">8</div>
+            <div class="col-md-2">9</div>
+        </div>
+    </div>
 </body>
 </html>
