--- a/Bootstrap/practiceBootstrap2_2.html
+++ b/Bootstrap/practiceBootstrap2_2.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Практическое задание 2.2 Создание средней модульной сетки </title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style_3.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" >
+    <link rel="stylesheet" href="css/style.3 css">
 </head>
 <body>
     <div class="container">
