--- a/Bootstrap/Создание макета.html
+++ b/Bootstrap/Создание макета.html
@@ -1,61 +1,58 @@
 <!DOCTYPE html>
-<div lang="ru">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ДОМАШНЯЯ РАБОТА</title>
-    <!-- Bootstrap -->
-   <link rel="stylesheet" href="css/bootstrap.min.css" >
-   <link rel="stylesheet" href="css/style.css">
+    <title>Домашняя работа</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<div>
-      <div class="container-fluid">
+<body>
+    <div class="container-fluid">
         <div class="row">
             <div class="col-md-2 header1">
-                <h3>ЛОГОТИП</h3>
-      </div>
-
-        <div class="col-md-8 header">
-               <h3>НАЗВАНИЕ САЙТА</h3>
+                <h3>Логотип</h3>
+            </div>
+            <div class="col-md-8 header">
+                <h3>Название сайта</h3>
+            </div>
+            <div class="col-md-2 header2">
+                <h3>Контакты</h3>
+            </div>
         </div>
 
-        <div class="col-md-2 header2">
-               <h3>КОНТАКТЫ</h3>
+        <div class="row">
+            <div class="col-md-12 photo">
+                <h2>Фото</h2>
+            </div>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="col-md-12 photo">
-              <h2>ФОТО</h2>
+        <div class="row">
+            <div class="col-md-12 tovar">
+                <h4>Товары</h4>
+            </div>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="col-md-12 tovar">
-              <h4>ТОВАРЫ</h4>
+        <div class="row">
+            <div class="col-md-2 my-3 offset-3 cell"></div>
+            <div class="col-md-2 my-3 offset-2 cell"></div>
         </div>
-      </div>
 
-      <div class="row">
-        <div class="col-md-2 my-3 offset-3 cell"></div>
-        <div class="col-md-2 my-3 offset-2 cell"></div>
-      </div>
-
-      <div class="row">
-        <div class="col-md-2 my-3 cell1"></div>
-        <div class="col-md-2 my-3 offset-1 cell1"></div>
-        <div class="col-md-2 my-3 offset-2 cell1"></div>
-        <div class="col-md-2 my-3 offset-1 cell1"></div>
-      </div>
-      </div>
-
-      <div class="row"></div>
-      <div class="col-md-12 footer">
-           <h4>ФУТЕР</h4>
-       </div>
+        <div class="row">
+            <div class="col-md-2 my-3 cell1"></div>
+            <div class="col-md-2 my-3 offset-1 cell1"></div>
+            <div class="col-md-2 my-3 offset-2 cell1"></div>
+            <div class="col-md-2 my-3 offset-1 cell1"></div>
+        </div>
+        </div>
+        
+        <div class="row">
+            <div class="col-md-12 footer">
+                <h4>Футер</h4>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
+    </div>
 </body>
 </html>
