--- a/Bootstrap/practiceBootstrap4_1.html
+++ b/Bootstrap/practiceBootstrap4_1.html
@@ -17,7 +17,7 @@
         </div> 
 
         <div class="form-group"> 
-            <label for="Password1">Введите пароль</label> 
+            <label for="Password1">Введите пароль^^</label> 
             <input type="password" class="form-control" id="Password1" placeholder="Пароль"> 
         </div> 
         </form> 
@@ -35,7 +35,7 @@
 
         <div class="checkbox"> 
             <label> 
-              <input type="checkbox"> Запомнить меня 
+              <input type="checkbox"> Запомнить меня^^: 
             </label> 
         </div> 
         <button type="submit" class="btn btn-default">Отправить</button> 
