--- a/Bootstrap/practiceBootstrap4_2.html
+++ b/Bootstrap/practiceBootstrap4_2.html
@@ -13,7 +13,7 @@
       <form class="form-horizontal" role="form"> 
     <div class="form-group">
       <h3>Поле ввода</h3>
-          <label for="inputEmail3" class="col-sm-2">Email</label> 
+          <label for="inputEmail3" class="col-sm-2">Email^^</label> 
     <div class="col-sm-2">
           <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
     </div> 
