--- a/Bootstrap/practiceBootstrap4_4.html
+++ b/Bootstrap/practiceBootstrap4_4.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container"><br> 
-        <h4>Типы кнопок</h4> 
+        <h4>Типы кнопок^^</h4> 
         <button type="button" class="btn btn-default">По умолчанию</button>
         <button type="button" class="btn btn-primary">Основная</button>
         <button type="button" class="btn btn-success">Успех</button> 
@@ -18,13 +18,15 @@
         <button type="button" class="btn btn-warning">Предупреждение</button> 
         <button type="button" class="btn btn-danger">Опасный</button> 
         <button type="button" class="btn btn-link">Ссылка</button> 
-        <h4>Размеры кнопок</h4> 
+
+        <h4>Размеры кнопок^^</h4> 
         <button type="button" class="btn btn-primary btn-lg">Большая кнопка</button> 
         <button type="button" class="btn btn-success">Обычная кнопка</button> 
         <button type="button" class="btn btn-info btn-sm">Маленькая кнопка</button> 
         <button type="button" class="btn btn-warning btn-xs">Самая маленькая кнопка</button><br><br> 
-        <button type="button" class="btn btn-danger btn-block">Кнопка под размер блока</button> 
-        <h4>Активные кнопки</h4> 
+        <button type="button" class="btn btn-danger btn-block">Кнопка под размер блока</button>
+
+        <h4>Активные кнопки^^</h4> 
         <button type="button" class="btn btn-default active">По умолчанию</button> 
         <button type="button" class="btn btn-primary active"> Основная</button> 
         <button type="button" class="btn btn-success active">Успех</button> 
